[MCOMPILER-296] Add jpms.args to the META-INF folder
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1805828 13f79535-47bb-0310-9956-ffa450edef68